--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,21 +12,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="174dp"
-        android:layout_marginTop="89dp"
+        android:layout_marginTop="16dp"
         android:layout_marginEnd="179dp"
         android:text="@string/titulo"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.457"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/txtDescripcion"
-        android:layout_width="402dp"
-        android:layout_height="58dp"
+        android:layout_width="334dp"
+        android:layout_height="139dp"
         android:layout_marginTop="32dp"
         android:text="@string/descripcion"
         android:textAlignment="center"
-        android:textSize="18sp"
+        android:textColor="@android:color/holo_orange_dark"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView3" />
@@ -36,10 +41,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="59dp"
-        android:layout_marginTop="461dp"
+        android:layout_marginTop="580dp"
         android:layout_marginEnd="108dp"
         android:text="@string/btn_registro"
+        android:textColor="@android:color/holo_orange_dark"
         app:layout_constraintEnd_toStartOf="@+id/btnLogin"
+        app:layout_constraintHorizontal_bias="0.418"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -47,20 +54,22 @@
         android:id="@+id/btnLogin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="461dp"
-        android:layout_marginEnd="68dp"
+        android:layout_marginTop="580dp"
+        android:layout_marginEnd="56dp"
         android:text="@string/btn_login"
+        android:textColor="@android:color/holo_orange_dark"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView3"
-        android:layout_width="208dp"
-        android:layout_height="186dp"
+        android:layout_width="298dp"
+        android:layout_height="260dp"
         android:layout_marginStart="101dp"
-        android:layout_marginTop="43dp"
+        android:layout_marginTop="24dp"
         android:layout_marginEnd="103dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/txtTitulo"
         app:srcCompat="@drawable/lost" />
